<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    
	<ListPreference android:title="@string/preference_trigger_alarm_distance_title"
	    android:summary="@string/preference_trigger_alarm_distance_summary"
	    android:key="key_TriggerAlarmDistance"
	    android:entries="@array/prefs_trigger_alarm_distances"
	    android:entryValues="@array/prefs_trigger_alarm_distances_values"
	    android:defaultValue="10"/>

	<CheckBoxPreference android:title="@string/preference_add_locations_title"
	    android:summary="@string/preference_add_locations_summary"
	    android:key="key_AddLocations"
	    android:defaultValue="true"/>

	<CheckBoxPreference android:title="@string/preference_prefer_gps_title"
	    android:summary="@string/preference_prefer_gps_summary"
	    android:key="key_PreferGps"
	    android:defaultValue="true"/>

	<CheckBoxPreference android:title="@string/preference_speech_notify_title"
	    android:summary="@string/preference_speech_notify_summary"
	    android:key="key_SpeechNotify"
	    android:defaultValue="false"/>

</PreferenceScreen>
